maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:27: error: forward reference extends over definition of variable x
 if (x >= width || y >= height){
                   ^JediEscaper:27: error: forward reference extends over definition of variable y
 if (x >= width || y >= height){
                   ^